--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
 <p>My first paragraph.</p>
-
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+<p>My first paragraph.</p>
+<h3>My First Heading</h3>
+<p>My first paragraph.</p>
+<p>My first paragraph.</p>
 </body>
 </html>
